<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_menu_main_relative_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue3">

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilitaone_regular"
        android:background="@null"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    <Button
        android:id="@+id/leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilitaone_regular"
        android:background="@null"
        android:text="@string/leaderboard"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/play_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilitaone_regular"
        android:background="@null"
        android:text="@string/Settings"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/leaderboard"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>


</RelativeLayout>