<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/darkBlue3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/darkBlue3">

        <ImageButton
            android:id="@+id/leaderboard_fragment_backbutton"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:tint="@color/white"
            android:src="?attr/homeAsUpIndicator"/>

        <TextView
            android:id="@+id/leaderboard_fragment_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/leaderboard"
            android:fontFamily="@font/lilitaone_regular"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/leaderboard_fragment_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/tablayout"
            app1:tabTextAppearance="@style/LeaderboardTabLayoutText"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginBottom="30dp">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabname"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabscore"/>

        </android.support.design.widget.TabLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/leaderboard_fragment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/leaderboard_fragment_tablayout"
            android:layout_centerHorizontal="true"
            android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/leaderboard_fragment_unavailable_scores_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/leaderboard_fragment_tablayout"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="Scores Unavailable" />

    </RelativeLayout>



</LinearLayout>